dart/vendor/sweph/native/sweph/src/swephexp.h



/*ext_def(void) swe_set_timeout(int32 tsec);*/

/****************************
 * exports from swedate.c
 ****************************/

ext_def( int ) swe_date_conversion(
        int y , int m , int d ,         /* year, month, day */
        double utime,   /* universal time in hours (decimal) */
        char c,         /* calendar g[regorian]|j[ulian] */
        double *tjd);


ext_def( double ) swe_julday(
        int year, int month, int day, double hour,
        int gregflag);


ext_def( void ) swe_revjul (
        double jd,
        int gregflag,
        int *jyear, int *jmon, int *jday, double *jut);


ext_def(int32) swe_utc_to_jd(
        int32 iyear, int32 imonth, int32 iday,
	int32 ihour, int32 imin, double dsec,
	int32 gregflag, double *dret, char *serr);


ext_def(void) swe_jdet_to_utc(
        double tjd_et, int32 gregflag,
	int32 *iyear, int32 *imonth, int32 *iday,
	int32 *ihour, int32 *imin, double *dsec);


ext_def(void) swe_jdut1_to_utc(
        double tjd_ut, int32 gregflag,
	int32 *iyear, int32 *imonth, int32 *iday,
	int32 *ihour, int32 *imin, double *dsec);


ext_def(void) swe_utc_time_zone(
        int32 iyear, int32 imonth, int32 iday,
	int32 ihour, int32 imin, double dsec,
	double d_timezone,
	int32 *iyear_out, int32 *imonth_out, int32 *iday_out,
	int32 *ihour_out, int32 *imin_out, double *dsec_out);


/****************************
 * exports from swehouse.c
 ****************************/

ext_def( int ) swe_houses(
        double tjd_ut, double geolat, double geolon, int hsys,
	double *cusps, double *ascmc);


ext_def( int ) swe_houses_ex(
        double tjd_ut, int32 iflag, double geolat, double geolon, int hsys,
	double *cusps, double *ascmc);


ext_def( int ) swe_houses_ex2(
        double tjd_ut, int32 iflag, double geolat, double geolon, int hsys,
	double *cusps, double *ascmc, double *cusp_speed, double *ascmc_speed, char *serr);


ext_def( int ) swe_houses_armc(
        double armc, double geolat, double eps, int hsys,
	double *cusps, double *ascmc);


ext_def( int ) swe_houses_armc_ex2(
        double armc, double geolat, double eps, int hsys,
	double *cusps, double *ascmc, double *cusp_speed, double *ascmc_speed, char *serr);


ext_def(double) swe_house_pos(
	double armc, double geolat, double eps, int hsys, double *xpin, char *serr);