dart/vendor/sweph/lib/src/bindings.dart


  late final _swe_date_conversionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int32, ffi.Int32, ffi.Int32, ffi.Double,
              ffi.Uint8, ffi.Pointer<ffi.Double>)>>('swe_date_conversion');
  late final _swe_date_conversion = _swe_date_conversionPtr.asFunction<
      int Function(int, int, int, double, int, ffi.Pointer<ffi.Double>)>();

  double swe_julday(
    int year,
    int month,
    int day,
    double hour,
    int gregflag,
  ) {
    return _swe_julday(
      year,
      month,
      day,
      hour,
      gregflag,
    );
  }

  late final _swe_juldayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(ffi.Int32, ffi.Int32, ffi.Int32, ffi.Double,
              ffi.Int32)>>('swe_julday');
  late final _swe_julday =
      _swe_juldayPtr.asFunction<double Function(int, int, int, double, int)>();

  void swe_revjul(
    double jd,
    int gregflag,
    ffi.Pointer<ffi.Int32> jyear,
    ffi.Pointer<ffi.Int32> jmon,
    ffi.Pointer<ffi.Int32> jday,
    ffi.Pointer<ffi.Double> jut,
  ) {
    return _swe_revjul(
      jd,
      gregflag,
      jyear,
      jmon,
      jday,
      jut,
    );
  }

  late final _swe_revjulPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              ffi.Int32,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Int32>,
              ffi.Pointer<ffi.Double>)>>('swe_revjul');
  late final _swe_revjul = _swe_revjulPtr.asFunction<
      void Function(double, int, ffi.Pointer<ffi.Int32>, ffi.Pointer<ffi.Int32>,
          ffi.Pointer<ffi.Int32>, ffi.Pointer<ffi.Double>)>();

  int swe_utc_to_jd(
    int iyear,
    int imonth,
    int iday,
    int ihour,
    int imin,
    double dsec,
    int gregflag,
    ffi.Pointer<ffi.Double> dret,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_utc_to_jd(
      iyear,
      imonth,
      iday,
      ihour,
      imin,
      dsec,
      gregflag,
      dret,
      serr,
    );
  }

  late final _swe_utc_to_jdPtr = _lookup<
      ffi.NativeFunction<
          int32 Function(
              int32,
              int32,
              int32,
              int32,
              int32,
              ffi.Double,
              int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_utc_to_jd');
  late final _swe_utc_to_jd = _swe_utc_to_jdPtr.asFunction<
      int Function(int, int, int, int, int, double, int,
          ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Uint8>)>();

  void swe_jdet_to_utc(
    double tjd_et,
    int gregflag,
    ffi.Pointer<int32> iyear,
    ffi.Pointer<int32> imonth,
    ffi.Pointer<int32> iday,
    ffi.Pointer<int32> ihour,
    ffi.Pointer<int32> imin,
    ffi.Pointer<ffi.Double> dsec,
  ) {
    return _swe_jdet_to_utc(
      tjd_et,
      gregflag,
      iyear,
      imonth,
      iday,
      ihour,
      imin,
      dsec,
    );
  }

  late final _swe_jdet_to_utcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              int32,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<ffi.Double>)>>('swe_jdet_to_utc');
  late final _swe_jdet_to_utc = _swe_jdet_to_utcPtr.asFunction<
      void Function(
          double,
          int,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<ffi.Double>)>();

  void swe_jdut1_to_utc(
    double tjd_ut,
    int gregflag,
    ffi.Pointer<int32> iyear,
    ffi.Pointer<int32> imonth,
    ffi.Pointer<int32> iday,
    ffi.Pointer<int32> ihour,
    ffi.Pointer<int32> imin,
    ffi.Pointer<ffi.Double> dsec,
  ) {
    return _swe_jdut1_to_utc(
      tjd_ut,
      gregflag,
      iyear,
      imonth,
      iday,
      ihour,
      imin,
      dsec,
    );
  }

  late final _swe_jdut1_to_utcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double,
              int32,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<ffi.Double>)>>('swe_jdut1_to_utc');
  late final _swe_jdut1_to_utc = _swe_jdut1_to_utcPtr.asFunction<
      void Function(
          double,
          int,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<ffi.Double>)>();

  void swe_utc_time_zone(
    int iyear,
    int imonth,
    int iday,
    int ihour,
    int imin,
    double dsec,
    double d_timezone,
    ffi.Pointer<int32> iyear_out,
    ffi.Pointer<int32> imonth_out,
    ffi.Pointer<int32> iday_out,
    ffi.Pointer<int32> ihour_out,
    ffi.Pointer<int32> imin_out,
    ffi.Pointer<ffi.Double> dsec_out,
  ) {
    return _swe_utc_time_zone(
      iyear,
      imonth,
      iday,
      ihour,
      imin,
      dsec,
      d_timezone,
      iyear_out,
      imonth_out,
      iday_out,
      ihour_out,
      imin_out,
      dsec_out,
    );
  }

  late final _swe_utc_time_zonePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              int32,
              int32,
              int32,
              int32,
              int32,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<int32>,
              ffi.Pointer<ffi.Double>)>>('swe_utc_time_zone');
  late final _swe_utc_time_zone = _swe_utc_time_zonePtr.asFunction<
      void Function(
          int,
          int,
          int,
          int,
          int,
          double,
          double,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<int32>,
          ffi.Pointer<ffi.Double>)>();

  /// exports from swehouse.c
  int swe_houses(
    double tjd_ut,
    double geolat,
    double geolon,
    int hsys,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
  ) {
    return _swe_houses(
      tjd_ut,
      geolat,
      geolon,
      hsys,
      cusps,
      ascmc,
    );
  }

  late final _swe_housesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Double, ffi.Double, ffi.Double, ffi.Int32,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)>>('swe_houses');
  late final _swe_houses = _swe_housesPtr.asFunction<
      int Function(double, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();

  int swe_houses_ex(
    double tjd_ut,
    int iflag,
    double geolat,
    double geolon,
    int hsys,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
  ) {
    return _swe_houses_ex(
      tjd_ut,
      iflag,
      geolat,
      geolon,
      hsys,
      cusps,
      ascmc,
    );
  }

  late final _swe_houses_exPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Double,
              int32,
              ffi.Double,
              ffi.Double,
              ffi.Int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('swe_houses_ex');
  late final _swe_houses_ex = _swe_houses_exPtr.asFunction<
      int Function(double, int, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();

  int swe_houses_ex2(
    double tjd_ut,
    int iflag,
    double geolat,
    double geolon,
    int hsys,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
    ffi.Pointer<ffi.Double> cusp_speed,
    ffi.Pointer<ffi.Double> ascmc_speed,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_houses_ex2(
      tjd_ut,
      iflag,
      geolat,
      geolon,
      hsys,
      cusps,
      ascmc,
      cusp_speed,
      ascmc_speed,
      serr,
    );
  }

  late final _swe_houses_ex2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Double,
              int32,
              ffi.Double,
              ffi.Double,
              ffi.Int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_houses_ex2');
  late final _swe_houses_ex2 = _swe_houses_ex2Ptr.asFunction<
      int Function(
          double,
          int,
          double,
          double,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  int swe_houses_armc(
    double armc,
    double geolat,
    double eps,
    int hsys,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
  ) {
    return _swe_houses_armc(
      armc,
      geolat,
      eps,
      hsys,
      cusps,
      ascmc,
    );
  }

  late final _swe_houses_armcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>)>>('swe_houses_armc');
  late final _swe_houses_armc = _swe_houses_armcPtr.asFunction<
      int Function(double, double, double, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>)>();

  int swe_houses_armc_ex2(
    double armc,
    double geolat,
    double eps,
    int hsys,
    ffi.Pointer<ffi.Double> cusps,
    ffi.Pointer<ffi.Double> ascmc,
    ffi.Pointer<ffi.Double> cusp_speed,
    ffi.Pointer<ffi.Double> ascmc_speed,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_houses_armc_ex2(
      armc,
      geolat,
      eps,
      hsys,
      cusps,
      ascmc,
      cusp_speed,
      ascmc_speed,
      serr,
    );
  }

  late final _swe_houses_armc_ex2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Double,
              ffi.Double,
              ffi.Double,
              ffi.Int32,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Uint8>)>>('swe_houses_armc_ex2');
  late final _swe_houses_armc_ex2 = _swe_houses_armc_ex2Ptr.asFunction<
      int Function(
          double,
          double,
          double,
          int,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Uint8>)>();

  double swe_house_pos(
    double armc,
    double geolat,
    double eps,
    int hsys,
    ffi.Pointer<ffi.Double> xpin,
    ffi.Pointer<ffi.Uint8> serr,
  ) {
    return _swe_house_pos(
      armc,
      geolat,
      eps,
      hsys,
      xpin,
      serr,
    );
  }
